--- a/WebBlogAPI/template.yaml
+++ b/WebBlogAPI/template.yaml
@@ -1,7 +1,15 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Resources:
-  WebBlogAPI:
+  WebBlogAPIGateway:
+    Type: AWS::Serverless::Api
+    Properties:
+        StageName: Prod
+        Cors:
+            AllowOrigin: "'http://localhost:4200'"
+            AllowMethods: "'GET,POST,PUT,DELETE,OPTIONS'"
+            AllowHeaders: "'Content-Type,Authorization,Access-Control-Allow-Origin'"    
+  WebBlog:
     Type: AWS::Serverless::Function
     Properties:
       Handler: WebBlogAPI::WebBlogAPI.Function::FunctionHandler
@@ -10,5 +18,6 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /posts
-            Method: post
+            Path: /api
+            Method: ANY
+            RestApiId: !Ref WebBlogAPIGateway
